# Mike-Resophy

./: .gitignore  LICENSE  README.md  app.py  ori_markdown.md  pyproject.toml  requirements.txt  test.py  test2.py  test3.py  translate.py
agent_tools/: summary_pdf.py  translate_pdf.py
ai_server/: mineru_server.sh  qwen4b_server.sh
basic_tools/: arxiv_client.py  category_manager.py  daily_arxiv.py  paper_repository.py  pdf_extractor.py  upload_paper.py  zotero_parser.py
core/: base_paper.py  paper_store.py  search_index.py
docs/: README_cn.md  README_en.md  installation_en.md  installation_zh.md  quick_start_basic_operations_prompt.md
requirements/: agentic.txt  basic.txt
resophy/core/: __init__.py  base_paper.py  paper_store.py  search_index.py
resophy/routes/: __init__.py
resophy/routes/agent_routes/: agent_summary_route.py  agent_translate_route.py
resophy/routes/basic_routes/: bilingual_route.py  category_tree_route.py  chat_route.py  csv_import_route.py  daily_arxiv_route.py  export_route.py  import_route.py  institution_mapping_route.py  paper_operation_route.py  relative_paper_route.py  search_route.py  settings_route.py  update_from_url_route.py  upload_from_pdf_route.py
resophy/tools/: __init__.py  api_test_utils.py  instituionMap.json  institution_normalizer.py
resophy/tools/agent_tools/: bilingual_translate.py  glossary.json  summary_pdf.py  translate_pdf.py
resophy/tools/basic_tools/: arxiv_client.py  category_manager.py  daily_arxiv.py  mineru_api_client.py  paper_repository.py  parallel_downloader.py  pdf_extractor.py  relative_paper_searcher.py  upload_paper.py  zotero_parser.py
routes/: agent_summary_route.py  agent_translate_route.py
routes/agent_routes/: agent_summary_route.py  agent_translate_route.py
routes/basic_routes/: category_tree_route.py  daily_arxiv_route.py  import_route.py  institution_mapping_route.py  paper_operation_route.py  search_route.py  settings_route.py  update_from_url_route.py  upload_from_pdf_route.py
scripts/: batch_fetch_affiliations.py
static/css/: style.css
static/js/: app.js
templates/: analysis_viewer.html  bilingual_viewer.html  index.html  pdf_viewer.html
test_papers/: .search_index.db
tools/: __init__.py  api_test_utils.py  institution_normalizer.py
tools/agent_tools/: summary_pdf.py  translate_pdf.py
tools/basic_tools/: daily_arxiv.py  paper_repository.py  upload_paper.py  zotero_parser.py
vllm_server/: AI_read_paper.py  MinerU2.5-2509-1.2B  Qwen3-30B-A3B-Instruct-2507  Qwen3-4B-Instruct-2507  mineru_server.sh  pdf2md_mineru.sh  pdf2zh_babel.sh  qwen30b_server.sh  start_server.sh  test.py
