[project]
name = "resophy"
version = "0.1.0"
description = "一个完全开源、面向 Vibe Coding 的现代论文阅读与管理平台"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Resophy Team"}
]
keywords = ["paper", "research", "pdf", "arxiv", "ai", "translation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Flask==2.3.3",
    "Werkzeug==2.3.7",
    "PyPDF2==3.0.1",
    "PyMuPDF==1.25.2",
    "arxiv>=2.3.0",
    "openai==2.7.1",
    "requests>=2.32.3",
    "rdflib==7.5.0",
    "Pillow==11.3.0",
]

[project.optional-dependencies]
local = []  # 基础功能已包含在 dependencies 中
server = [
    "mineru[core,vllm]>=2.6.5",
    "lmdeploy>=0.10.0",
    "huggingface-hub>=0.20.0",
    "modelscope>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "routes", "tools"]

